# cnapp-module-fork-konrad

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  README.md  docker-compose.yml  lol  mise.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  main.yml  publish.yml  pull-request.yml  pytest.yml
backend/: CHANGELOG.md  Dockerfile  pyproject.toml
backend/app/: main.py
backend/test/: conftest.py  test_app.py
frontend/: CHANGELOG.md  package-lock.json  package.json
policy/: semgrep.rego  trivy.rego
